<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/title_fragment_imc_calculator" />
        <item
            android:id="@+id/nav_peoples_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/title_fragment_peoples_list" />
        <item
            android:id="@+id/nav_info"
            android:checkable="false"
            android:enabled="false"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/title_fragment_info" />
    </group>

    <item android:title="@string/nav_subtitle_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/title_activity_settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit_to_app"
                android:title="@string/label_quit" />
        </menu>
    </item>

</menu>
